# turmite

./: CMakeLists.txt  README  README.md
include/: ant.h  configloader.h  grid.h
samples/: ant_1s2c.tur  empty.tur  fast_highway_3s5c.tur  fortification_2s3c.tur
src/: ant.cpp  configloader.cpp  grid.cpp  mainturmite.cpp  sandbox.cpp
